--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,11 +8,13 @@
         <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing.image.url">
         <div class="card-body">
           <p class="card-text">
+            Owned By <i><%= listing.owner.username %></i>
+            </p>
             <ul>
-                <li><%= listing.description %></li>
-                <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-                <li><%= listing.location %></li>
-                <li><%= listing.country %></li>
+              <p class="card-text"><li><%= listing.description %></li></p>
+              <p class="card-text"></p><li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li></p>
+              <p class="card-text"></p><li><%= listing.location %></li></p>
+              <p class="card-text"></p><li><%= listing.country %></li></p>
             </ul>
             <br>
             <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-this-listing-btn">Edit this Listing</a>
@@ -21,7 +23,7 @@
                 <button class="btn btn-dark delete-btn">Delete</button>
             </form>
 
-          </p>
+          
         </div>
         
        
