--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,11 +17,13 @@
               <p class="card-text"></p><li><%= listing.country %></li></p>
             </ul>
             <br>
+            <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
             <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-this-listing-btn">Edit this Listing</a>
             <br><br>
             <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
                 <button class="btn btn-dark delete-btn">Delete</button>
             </form>
+            <% } %>
 
           
         </div>
