--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -54,7 +54,7 @@
          <% for(let review of listing.reviews){  %>
           <div class="card col-5 mb-3 ms-3">
             <div class="card-body">
-              <h5 class="card-title"><% review.author.username%></h5>
+              <h5 class="card-title">@<%= review.author.username %></h5>
               <p class="card-text"><%= review.comment %></p>
               <p class="card-text"><%= review.rating %>stars</p>
             </div>
