--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,7 @@
     <h3>Edit your listings</h3>
     <div class="row">
     <div class="col-8 offset-2">
-    <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+    <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3" >
         <label for="title" class="form-label" >Title </label>
         <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required>
@@ -19,10 +19,8 @@
         </div>
         <br>
         <div class="mb-3" >
-        <label for="imagelink" class="form-label" >Image URL/Link </label>
-        <input name="listing[image]" value="<%= listing.image.url %>" type="text" class="form-control" required>
-        <div class="valid-feedback">looks good</div>
-        <div class="invalid-feedback">image field is required</div>
+        <label for="imagelink" class="form-label" >Upload New Image </label>
+        <input name="listing[image]" type="file" class="form-control" >
         </div>
         <br>
         <div class="row">
