--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -18,6 +18,11 @@
         <div class="invalid-feedback">description field is required</div>
         </div>
         <br>
+        <div>
+        Original Listing Image<hr>
+        <img src="<%= imageUrl %>">
+        </div>
+        <br>
         <div class="mb-3" >
         <label for="imagelink" class="form-label" >Upload New Image </label>
         <input name="listing[image]" type="file" class="form-control" >
