L-60.1 done and skipped maps

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top" > <!--yaha lg ka matlab navbar expanded dikhega large  sized screens par,agar medium par bhi expanded chahiye to -md  laga sakte hai-->
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
       <button 
       class="navbar-toggler" 
       type="button" 
@@ -11,8 +11,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link "  href="/">Home</a><!--yaha active class aur add karne se sara anchors dark ho jayenge par agar keval hover par hi dark rakhna hai to -->
-          <a class="nav-link " href="/listings">All Listings</a>
+          <a class="nav-link " href="/listings">Explore</a>
           <a class="nav-link " href="/listings/new">Add New Listing</a>
         </div>
         <div class="navbar-nav">
