--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,17 @@
 <% layout("/layouts/boilerplate") -%>
 <body>
     <%= success %>
-    <h3>ALL LISTS</h3>
+    <!--<h3>ALL LISTS</h3>-->
     <!--<form method="get" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <div class="filters">
+        <div class="filter">
+            <i class="fa-solid fa-fire"></i>
+            Trending
+        </div>
+    </div>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for(listing of allListings){ %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
                 <div class="card col listing-card" style="width: 20rem">
