--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,26 @@
+<style>
+  .btn-search{
+    background-color: #fe424d;
+    color:#fff;
+    border-radius: 25px;
+    padding:0 1rem 0 1rem ;
+  }
+  .btn-search:hover{
+    background-color: #fe424d;
+    color:#fff;
+    border-radius: 25px;
+    padding:0 1rem 0 1rem ;
+  }
+  .btn-search i{
+    display: inline;
+  }
+  .search-inp{
+    border-radius: 25px;
+    padding:0.5rem 3rem 0.5rem 3rem;
+  }
+</style>
+
+
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top" > <!--yaha lg ka matlab navbar expanded dikhega large  sized screens par,agar medium par bhi expanded chahiye to -md  laga sakte hai-->
     <div class="container-fluid">
       <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
@@ -14,6 +37,12 @@
           <a class="nav-link " href="/listings">Explore</a>
           <a class="nav-link " href="/listings/new">Add New Listing</a>
         </div>
+       <div class="navabar-nav ms-auto">
+        <form class="d-flex navbar-nav ms-auto" role="search">
+          <input class="form-control me-2 search-inp" type="search" placeholder="Search Destinations" aria-label="Search">
+          <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        </form>
+       </div>
         <div class="navbar-nav">
           <% if(!currUser){ %>
             <a class="nav-link "  href="/signup">Sigh Up</a><!--yaha active class aur add karne se sara anchors dark ho jayenge par agar keval hover par hi dark rakhna hai to -->
