--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,11 +5,78 @@
     <!--<form method="get" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
+    <style>
+        .filters{
+            margin-top:4px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+        .filter{
+            text-align: center;
+            margin-right: 2rem;
+            margin-top: 2rem;
+            opacity: 0.7;
+        }
+        .filter:hover{
+            opacity: 1;
+            cursor:pointer;
+        }
+        .filter p{
+    font-size: 0.8 rem;
+       }
+       .tax-info{
+        display:none;
+       }
+       .tax-toogle{
+        border: 1px solid black;
+        border-radius: 1rem;
+        padding: 1rem;
+       }
+    </style>
     <div class="filters">
         <div class="filter">
-            <i class="fa-solid fa-fire"></i>
-            Trending
+           <div> <i class="fa-solid fa-fire"></i></div>
+            <p>Trending</p>
         </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+             <p>Rooms</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Iconic Cities</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Mountains</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Castles</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Amazing Pools</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Camping</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Farms</p>
+         </div>
+         <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i></div>
+             <p>Arctic</p>
+         </div>
+         <div>
+            <div class="form-check-reverse form-switch tax-toogle">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+              </div>
+         </div>
     </div>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for(listing of allListings){ %>
@@ -20,13 +87,27 @@
                     <div class="card-body">
                     <p class="card-text">
                         <b><%= listing.title %></b><br>    
-                        &#8377;<%= listing.price.toLocaleString("en-IN") %>/night    
+                        &#8377;<%= listing.price.toLocaleString("en-IN") %>/night 
+                        <i class="tax-info">&nbsp;&nbsp;+18% GST</i>   
                     </p>
+
                     </div>
                   </div>
             </a>
               <% } %>
     </div>
    
-   
+    <script>
+        let taxswitch=document.getElementById("flexSwitchCheckDefault");
+        taxswitch.addEventListener("click",()=>{
+            let taxinfo=document.getElementsByClassName("tax-info");
+            for(info of taxinfo){
+                if(info.style.display!="inline"){
+                info.style.display="inline";
+            }else{
+                info.style.display="none";
+            };
+            }
+        });
+    </script>
 </body>
